--- a/polls/templates/login.html
+++ b/polls/templates/login.html
@@ -55,6 +55,7 @@
 	<script src="/static/js/jquery-3.3.1.js"></script>
 	<script src="/static/js/jquerysession.js"></script>
 
+	<link href="/static/thirdparty/fontawesome-free-5.0.10/web-fonts-with-css/css/fontawesome-all.css" rel="stylesheet">
 	
 	<script>
 		$(document).ready(function() {
@@ -86,9 +87,9 @@
 					<div class="col-md-12 col-md-offset-0 text-center menu-1">
 						<ul>
 							<li class="active"><a href="/loginsucc">首页</a></li>
-							<li><a href="#">论坛</a></li>
+							<li><a  href="/blog/?pg=1&searchval=">论坛</a></li>
 							<li class="has-dropdown">
-								<a href="#">报告</a>
+								<a href="/report">报告</a>
 								<ul class="dropdown">
 									<li><a href="#">电力</a></li>
 									<li><a href="#">暖通</a></li>
@@ -99,7 +100,7 @@
 							<li><a href="#">人事</a></li>
 							<li><a href="#">其它</a></li>
 							<li><a href="#">联系我们</a></li>
-							
+							<li><a href="/logout" ><i class="fas fa-sign-out-alt "></i></a></li>
 						</ul>
 					</div>
 				</div>
