--- a/polls/templates/report.html
+++ b/polls/templates/report.html
@@ -239,6 +239,7 @@
 			}
 		}
 		
+		
 	
 		function genManageUserstable(pg)
 		{
@@ -264,6 +265,10 @@
 							unvisibleflg = temp.rsltusers[u].unvisibleflg
 							readonlyflg = temp.rsltusers[u].readonlyflg
 							rwflg = temp.rsltusers[u].rwflg
+							if(unvisibleflg==false && readonlyflg==false && rwflg==false)
+							{
+								unvisibleflg=true
+							}
 							
 							new_tr = document.createElement("tr")
 							if(u%2==0)
@@ -280,18 +285,40 @@
 							new_tr.appendChild(new_td)
 							
 							new_td = document.createElement("td")
-							new_td.innerText = unvisibleflg
-							new_td.innerHTML = '<input type="radio" name="' + username+'" value="unvisibleflg">'
+							if(unvisibleflg==true)
+							{
+								new_td.innerHTML = '<input type="radio" name="'+username+'" value="unvisibleflg" onchange="userrightchg(this)" checked="true">'
+							}
+							else
+							{
+								new_td.innerHTML = '<input type="radio" name="'+username+'" value="unvisibleflg" onchange="userrightchg(this)">'
+							}
 							new_tr.appendChild(new_td)
 							
 							new_td = document.createElement("td")
 							new_td.innerText = readonlyflg
-							new_td.innerHTML = '<input type="radio" name="'+username+'" value="readonlyflg">'
+							
+							if(readonlyflg==true)
+							{
+								new_td.innerHTML = '<input type="radio" name="'+username+'" value="readonlyflg" onchange="userrightchg(this)" checked="true">'
+							}
+							else
+							{
+								new_td.innerHTML = '<input type="radio" name="'+username+'" value="readonlyflg" onchange="userrightchg(this)">'
+							}
 							new_tr.appendChild(new_td)
 							
 							new_td = document.createElement("td")
 							new_td.innerText = rwflg
-							new_td.innerHTML = '<input type="radio" name="'+username+'" value="rwflg">'
+							if(rwflg==true)
+							{
+								new_td.innerHTML = '<input type="radio" name="'+username+'" value="rwflg" onchange="userrightchg(this)" checked="true">'
+							}
+							else
+							{
+								new_td.innerHTML = '<input type="radio" name="'+username+'" value="rwflg" onchange="userrightchg(this)">'
+							}
+							
 							new_tr.appendChild(new_td)
 							
 							document.getElementById("manageuserbody").appendChild(new_tr)
@@ -322,8 +349,40 @@
 		})
 		
 		$('#savemanageuser').click(function(){
-			var a = $("input[name='luhuaizhi']:checked").val();
-			//alert(a)	
+			rst=[]
+			trs = document.getElementById("manageuserbody").getElementsByTagName("tr")
+			for(i=0;i<trs.length;i++)
+			{
+				username = trs[i].getElementsByTagName("input")[0].name
+				ipt = 'input[name="'+username+'"]:checked'
+				var a = $(ipt).val();
+				rst.push({"username":username,"checkval":a})
+			}
+			
+			$.ajax({
+					url:'/updateuserright/',
+					type:'post',
+					//contentType: 'application/json',
+					data:{"aaa": JSON.stringify(rst),"menu_1": cur_menu.trim(),"menu_2":cur_menu_child.trim()}, //"cur_user":"{{request.session.username}}"
+					//data:{"aaa":rst},
+					//data:{"aaa": "sdfwefwefw"},
+					//dataType:'json',
+					//processData: false,  // tell jquery not to process the data
+					//contentType: false, // tell jquery not to set contentType
+					//contentType:"application/json; charset=UTF-8",
+					
+					
+					
+					async:false,
+					success: function(rps) {
+						//genManageUserstable(1)
+						toastr.success('保存用户权限成功！');
+					},
+					error:function(xhr,status,errMsg){
+						alert(status)
+						alert(errMsg)
+					}
+				})
 		})
 		
 		$("#divreporttable").show()//innerHTML = "";
@@ -339,7 +398,12 @@
 	
 	})//$(document).ready(function() end
 	
-	
+	function userrightchg(e)
+	{
+		//alert(e.name)
+		//alert(e.value)
+	}
+		
 	function hasClass(obj, cls) { 
 		return obj.className.match(new RegExp('(\\s|^)' + cls + '(\\s|$)')); 
 	} 
@@ -354,7 +418,6 @@
 			obj.className = obj.className.replace(reg, ' '); 
 		} 
 	}
-	
 	
 	function pageitemclick(e)
 	{
@@ -441,9 +504,7 @@
 		{
 			next_pg = cur_page
 		}
-		  
-				  
-				  
+		  			  
 		new_li = document.createElement("li")
 		new_li.className = "page-item"
 		new_li.innerHTML = '<a class="page-link" href="#" id="nextpage" )>下一页</a>'
@@ -550,7 +611,7 @@
 	}
 	
 	menu_2_list=[]
-		function genMenu(menu_1)//"电力"、“暖通”
+	function genMenu(menu_1)//"电力"、“暖通”
 	{
 		$.ajax({
 				url:'/genreportmenu',
@@ -578,6 +639,7 @@
 						if(i==0)
 						{
 							cur_menu_child = elictric_menu[i]
+							new_li.className += " active"
 						}
 						new_li.onclick = function(){menu_2_click(this)}
 						document.getElementById("menu_total").appendChild(new_li)
@@ -610,8 +672,6 @@
 	{
 		$("#divreporttable").show()//innerHTML = "";
 		$("#divmanageuser").hide()//innerHTML = "";
-		//alert(cur_menu)
-		//alert(e.innerText)
 		cur_menu_child = e.innerText
 		
 		all_menus = document.getElementById("menu_total").childNodes
@@ -642,18 +702,16 @@
 		return output; 
 	} 
 
-	function gotopagehref(){
-			window.location.href='#'//'/blog/?pg='+$('#gotopagetext').val()+'&searchval='+$('#searchblogcondition').val(); 
-		}
+	function gotopagehref()
+	{
+		window.location.href='#'//'/blog/?pg='+$('#gotopagetext').val()+'&searchval='+$('#searchblogcondition').val(); 
+	}
 	
 	total_pg=100//{{total_pg}} //总页数
 	cur_page=1//{{cur_page}} //当前页
 	av_page=10//{{av_page}}//每页个数
 	var pre_pg
 	var next_pg
-	
-	
-	
 		
 	</script>
 	</head>
@@ -696,11 +754,6 @@
 					<div class="services">
 						<div class="list-group">
 							<ul id="menu_total">
-								<!-- <script> -->
-									<!-- $(document).ready(function() { -->
-										<!-- genMenu(cur_menu) -->
-									<!-- }) -->
-								<!-- </script> -->
 							</ul>
 						</div>
 					</div>
@@ -711,13 +764,6 @@
 						<button type="button" class="btn btn-primary btn-sm form-inline" id="adminuser">管理权限</button>
 					</div>
 					<div class="services" id="divreporttable">
-						<!-- <script> -->
-							<!-- $(document).ready(function() { -->
-								<!-- genReporttable(1) -->
-								<!-- $("#divreporttable").show()//innerHTML = ""; -->
-								<!-- $("#divmanageuser").hide()//innerHTML = ""; -->
-							<!-- }) -->
-						<!-- </script>		 -->
 						<table class="table table-hover"  id="reporttable">
 							  <thead> 
 								
@@ -766,14 +812,6 @@
 								</tr>
 							  </thead>
 							  <tbody id="manageuserbody">
-								<tr>
-									<td>张三</td>
-									<td>只读</td>
-								</tr>
-								<tr>
-									<td>李四</td>
-									<td>读写</td>
-								</tr>
 							  </tbody>
 						</table> 
 						
@@ -866,9 +904,7 @@
 				  <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" id="uploadprocess" role="progressbar" style="width: 0%"></div>
 				</div>	
 				<!--进度条end-->
-			
-			  </div>
-			 
+			  </div> 
 			</fieldset>
 			</form> 
 		  </div>
@@ -1015,7 +1051,6 @@
 	<!-- Main -->
 	<script src="/static/thirdparty/ft5_79_church/js/main.js"></script>
 
-	
 	<!-- <script src="http://libs.useso.com/js/jquery/1.11.0/jquery.min.js" type="text/javascript"></script> -->
     <script>window.jQuery || document.write('<script src="/static/thirdparty/timeline/js/jquery-1.11.0.min.js"><\/script>')</script>
 	
