--- a/polls/templates/loginsucc.html
+++ b/polls/templates/loginsucc.html
@@ -91,7 +91,7 @@
 									<li><a href="#">设施</a></li>
 								</ul>
 							</li>
-							<li><a href="#">人事</a></li>
+							<li><a href="/organization">人事</a></li>
 							<li><a href="#">其它</a></li>
 							<li><a href="#">联系我们</a></li>
 							<li><a href="/logout" ><i class="fas fa-sign-out-alt "></i></a></li>
